--- a/app/src/main/res/layout/dialog_add.xml
+++ b/app/src/main/res/layout/dialog_add.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="20dp"
             android:hint="Texto"
-            android:inputType="numberDecimal"
+            android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edt_title" />
