--- a/app/src/main/res/layout/rv_items.xml
+++ b/app/src/main/res/layout/rv_items.xml
@@ -33,17 +33,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txtTitle"
         app:layout_constraintTop_toBottomOf="@+id/txtTitle"
-        tools:text="Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI," />
+        tools:text="text" />
 
     <TextView
-        android:id="@+id/txtxTime"
+        android:id="@+id/txtTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:translationZ="99dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/txtTitle"
         tools:text="16:30" />
@@ -52,8 +51,7 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:translationZ="99dp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtxTime"
+        app:layout_constraintBottom_toBottomOf="@+id/txtTime"
         app:layout_constraintEnd_toEndOf="@+id/txtText"
         app:layout_constraintTop_toTopOf="@+id/txtTitle"
         app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
@@ -66,8 +64,7 @@
         android:layout_marginRight="8dp"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:translationZ="99dp"
-        app:layout_constraintEnd_toStartOf="@+id/txtxTime"
+        app:layout_constraintEnd_toStartOf="@+id/txtTime"
         app:layout_constraintTop_toTopOf="@+id/txtTitle"
         tools:text="Diário" />
 
@@ -93,9 +90,9 @@
         android:layout_marginEnd="14dp"
         android:layout_marginRight="14dp"
         android:background="@drawable/bg_time"
-        app:layout_constraintBottom_toBottomOf="@+id/txtxTime"
+        app:layout_constraintBottom_toBottomOf="@+id/txtTime"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtTitle"
-        app:layout_constraintTop_toTopOf="@+id/txtxTime" />
+        app:layout_constraintTop_toTopOf="@+id/txtTime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
