--- a/app/src/main/res/layout/dialog_add.xml
+++ b/app/src/main/res/layout/dialog_add.xml
@@ -30,7 +30,8 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="20dp"
             android:hint="@string/text"
-            android:inputType="textPersonName"
+            android:inputType="textMultiLine"
+            android:maxLines="3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edt_title" />
